[package]
name = "mosquitto-sys"
version = "0.1.0"
authors = ["Elie Génard <elaye.github.io@gmail.com>"]
description = "System bindings to libmosquitto"
documentation = "https://github.com/elaye/mosquitto-sys"
homepage = "https://github.com/elaye/mosquitto-sys"
repository = "https://github.com/elaye/mosquitto-sys"
license = "MIT"
build = "build.rs"
links = "mosquitto"

[build-dependencies]
bindgen = "*"
